Closed Bug 1260702 Opened 9 years ago Closed 9 years ago

Crash with WebAudio inputs to MediaRecorder in MediaRecorder::InitEncoder()

Categories

(Core :: Audio/Video: Recording, defect)

Unspecified
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox46 --- unaffected
firefox47 --- fixed
firefox48 --- fixed

People

(Reporter: sole, Assigned: jesup)

References

Details

(Keywords: crash, DevAdvocacy)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-b70d5d9c-66af-4118-bcbd-01fa52160330. ============================================================= STR 1. Go to http://mozdevs.github.io/boo/ 2. Accept camera & mic usage. Press record button 3. Browser will crash on reaching the zero countdown This happens when the recorder tries to start recording as in here: https://github.com/mozdevs/boo/blob/master/app/js/Boo.js#L115
Keywords: DevAdvocacy
MozReview-Commit-ID: cseol6STUw
Attachment #8736305 - Flags: review?(padenot)
Assignee: nobody → rjesup
Status: NEW → ASSIGNED
Summary: crash in ReceivePort::WaitForMessage | mozilla::ipc::SharedMemoryBasic::ShareToProcess → Crash with WebAudio inputs to MediaRecorder in MediaRecorder::InitEncoder()
Attachment #8736305 - Flags: review?(padenot) → review+
Comment on attachment 8736305 [details] [diff] [review] Don't crash on input sources from WebAudio in MediaRecorder Approval Request Comment [Feature/regressing bug #]: Bug 1257318 [User impact if declined]: WebAudio sources break MediaRecorder [Describe test coverage new/current, TreeHerder]: No test currently; we'll look to add one on a separate bug. Manual testing is trivial using the link here; 100% reproducible. [Risks and why]: No risk to speak of. null-check [String/UUID change made/needed]: none
Attachment #8736305 - Flags: approval-mozilla-aurora?
Comment on attachment 8736305 [details] [diff] [review] Don't crash on input sources from WebAudio in MediaRecorder null-check, crash fix, Aurora47+
Attachment #8736305 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Does this bug also need to be uplifted to 46? Just checking to be sure.
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
See Also: → 1264209
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: