Bug 1260702: Don't crash on input sources from WebAudio in MediaRecorder r=padenot

MozReview-Commit-ID: cseol6STUw